fixed all visible ui bugs

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -25,3 +25,9 @@
         }
     }
 }
+
+.social-media-list{
+  .svg-icon {
+    box-sizing: content-box;
+  }
+}
