--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -73,7 +73,8 @@
     padding-bottom: 5px;
   }
 
-  .page-link {
+  // custom. previously named page-link
+  .menu-page-link {
     color: $text-color;
     line-height: $base-line-height;
     display: block;
@@ -104,7 +105,7 @@
       display: block;
     }
 
-    .page-link {
+    .menu-page-link {
       display: inline;
       padding: 0;
 
@@ -297,7 +298,8 @@
     a {
       display: block;
       padding: $spacing-unit / 4;
-      border: 1px solid $border-color-01;
+      // custom. commented
+      // border: 1px solid $border-color-01;
       &:hover { border-color: $border-color-02 }
     }
   }
